# serde_structuredqs

./: Cargo.toml  NOTICE  README.md
.github/workflows/: grant_tag.yml  publish_crate.yml  test_all.yml
src/: error.rs  lib.rs
src/de/: deserializer.rs  error.rs  key.rs  level.rs  mod.rs  parsablestring.rs  parse.rs  parser.rs  utility.rs
src/ser/: key.rs  keyvalue.rs  mod.rs  pair.rs  part.rs  seq.rs  toplevel.rs  value.rs
tests/: test_deserialize.rs  test_serialize.rs
