[package]
authors = ["fjnkt98 <fjnkt98@gmail.com>"]
description = "A Rust library for serialize/deserialize structured query-string. "
edition = "2021"
license = "Apache-2.0"
name = "serde_structuredqs"
repository = "https://github.com/fjnkt98/serde_structuredqs"
version = "0.1.1"

[dependencies]
form_urlencoded = "^1.1.0"
itoa = "^1.0.6"
percent-encoding = "^2.2.0"
ryu = "^1.0.13"
serde = {version = "^1.0.163"}
thiserror = "^1.0.40"

[dev-dependencies]
serde = {version = "^1.0.163", features = ["derive"]}
